test/files/neg/t5189.check
t5189.scala:3: error: type mismatch;
 found   : Nothing => Any
 required: Any => Any
  def f(x: Any): Any => Any = x match { case Foo(bar) => bar }
                                                         ^
one error found
